# traveling-salesman-problem

./: README.md  average.ipynb  base_tsp_solver.py  genetic_config.py  load_distances.py  plotting.ipynb  pyproject.toml  selection_factory.py  selection_method.py  tsp_solver.py
cuda/: check_if_cuda_works.py  gpu_vs_cpu.py
input/: 10.in  15.in
plotting/: plot_average_of_tests.ipynb  plot_charts.ipynb
src/: base_tsp_solver.py  config_parameters.py  crossover_method.py  crossover_methods.py  experiment_runner.py  gpu_accelerator.py  load_distances.py  mutation_method.py  mutation_methods.py  selection_method.py  selection_method_enums.py  selection_methods.py  tsp_factory.py  tsp_solver.py
src/enums/: tsp_genetic_enums.py
tsp/: base_tsp_solver.py  chromosome_operation_method.py  crossover_method.py  genetic_config.py  selection_factory.py  tsp_factory.py  tsp_solver.py
