[tool.poetry]
name = "traveling-salesman-problem"
version = "0.1.0"
description = ""
authors = ["Michal Szkudlarek <michal1szkudlarek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
