[tool.poetry]
name = "traveling-salesman-problem"
version = "0.1.0"
description = "Traveling Salesman Problem Solver"
authors = ["Michal Szkudlarek <michal1szkudlarek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "5.12.0"
pylint = "^3.3.1"
mypy = "^1.13.0"

[tool.taskipy.tasks]
lint_black = "poetry run black ."
lint_isort = "poetry run isort ."
lint_mypy = "poetry run mypy src"
lint_pylint = "poetry run pylint src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 113
target-version = ['py312']
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 113

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
pretty = true
explicit_package_bases = true
namespace_packages = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint]
py-version = "3.12"
max-line-length = 113
max-args = 10
max-attributes = 12

min-public-methods = 0

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
